--- a/package.json
+++ b/package.json
@@ -9,18 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/styled-components": "5.1.34",
+    "axios": "1.7.7",
+    "framer-motion": "11.9.0",
+    "leaflet": "1.9.4",
+    "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.14"
+    "react-icons": "5.3.0",
+    "react-leaflet": "4.2.1",
+    "recharts": "2.12.7",
+    "styled-components": "6.1.13"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/react": "16.0.1",
+    "@types/jest": "29.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/testing-library__react": "10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.14",
+    "jest": "29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "typescript": "^5"
   }
 }
