--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "framer-motion": "11.9.0",
     "leaflet": "1.9.4",
     "next": "14.2.14",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-icons": "5.3.0",
     "react-leaflet": "4.2.1",
+    "react-redux": "8.1.3",
     "recharts": "2.12.7",
     "styled-components": "6.1.13"
   },
