--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@types/styled-components": "5.1.34",
@@ -24,6 +26,16 @@
     "styled-components": "6.1.13"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "1.9.0",
+    "@storybook/addon-designs": "8.0.3",
+    "@storybook/addon-essentials": "8.3.4",
+    "@storybook/addon-interactions": "8.3.4",
+    "@storybook/addon-links": "8.3.4",
+    "@storybook/addon-onboarding": "8.3.4",
+    "@storybook/blocks": "8.3.4",
+    "@storybook/nextjs": "8.3.4",
+    "@storybook/react": "8.3.4",
+    "@storybook/test": "8.3.4",
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/react": "16.0.1",
     "@types/jest": "29.5.13",
@@ -33,8 +45,10 @@
     "@types/testing-library__react": "10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
+    "eslint-plugin-storybook": "0.9.0",
     "jest": "29.7.0",
     "postcss": "^8",
+    "storybook": "8.3.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
