Refactor MongoDB connection settings to use environment variables

--- a/weather-app-backend/.env
+++ b/weather-app-backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/weather-app?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://eyvazalishov:dv8LpeXppoeQu9FE@weatherapp.ixya2.mongodb.net/?retryWrites=true&w=majority&appName=weatherapp
 JWT_SECRET=your_jwt_secret
 PORT=5000
