--- a/weather-app-frontend/package.json
+++ b/weather-app-frontend/package.json
@@ -12,18 +12,30 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "2.1.2",
+    "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-navigation-menu": "1.2.1",
+    "@radix-ui/react-slot": "1.1.0",
+    "@radix-ui/react-switch": "1.1.1",
     "@types/styled-components": "5.1.34",
+    "autoprefixer": "10.4.20",
     "axios": "1.7.7",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.1",
     "framer-motion": "11.9.0",
     "leaflet": "1.9.4",
+    "lucide-react": "0.447.0",
     "next": "14.2.14",
+    "next-themes": "0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "5.3.0",
     "react-leaflet": "4.2.1",
     "react-redux": "8.1.3",
     "recharts": "2.12.7",
-    "styled-components": "6.1.13"
+    "styled-components": "6.1.13",
+    "tailwind-merge": "2.5.2",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "1.9.0",
@@ -47,9 +59,9 @@
     "eslint-config-next": "14.2.14",
     "eslint-plugin-storybook": "0.9.0",
     "jest": "29.7.0",
-    "postcss": "^8",
+    "postcss": "8.4.47",
     "storybook": "8.3.4",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "3.4.13",
     "typescript": "^5"
   }
 }
