--- a/weather-app-frontend/package.json
+++ b/weather-app-frontend/package.json
@@ -26,6 +26,7 @@
     "leaflet": "1.9.4",
     "lucide-react": "0.447.0",
     "next": "14.2.14",
+    "next-auth": "4.24.8",
     "next-themes": "0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -33,6 +34,7 @@
     "react-leaflet": "4.2.1",
     "react-redux": "8.1.3",
     "recharts": "2.12.7",
+    "sonner": "1.5.0",
     "styled-components": "6.1.13",
     "tailwind-merge": "2.5.2",
     "tailwindcss-animate": "1.0.7"
