--- a/weather-app-frontend/.env
+++ b/weather-app-frontend/.env
@@ -1,3 +1,7 @@
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=your_google_client_id
 NEXT_PUBLIC_GOOGLE_CLIENT_SECRET=your_google_client_secret
-NEXT_PUBLIC_NEXTAUTH_SECRET=your_random_secret_key
+NEXTAUTH_SECRET=kdgYIUYTJkyg909834lkhjly8ytejlgutr898LKJi
+NODE_ENV=development
+NEXT_PUBLIC_NEXTAUTH_URL=http://localhost:3000
+NEXT_PUBLIC_BACKEND_IP_ADDRESS=localhost
+NEXT_PUBLIC_BACKEND_PORT=5000
