--- a/weather-app-frontend/package.json
+++ b/weather-app-frontend/package.json
@@ -60,6 +60,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "eslint-plugin-storybook": "0.9.0",
+    "husky": "9.1.6",
     "jest": "29.7.0",
     "postcss": "8.4.47",
     "storybook": "8.3.4",
