--- a/weather-app-frontend/package.json
+++ b/weather-app-frontend/package.json
@@ -12,11 +12,16 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "6.6.0",
+    "@fortawesome/free-solid-svg-icons": "6.6.0",
+    "@fortawesome/react-fontawesome": "0.2.2",
     "@radix-ui/react-dropdown-menu": "2.1.2",
     "@radix-ui/react-label": "2.1.0",
     "@radix-ui/react-navigation-menu": "1.2.1",
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-switch": "1.1.1",
+    "@types/leaflet": "1.9.12",
+    "@types/react-leaflet": "2.8.3",
     "@types/styled-components": "5.1.34",
     "autoprefixer": "10.4.20",
     "axios": "1.7.7",
@@ -34,6 +39,7 @@
     "react-leaflet": "4.2.1",
     "react-redux": "8.1.3",
     "recharts": "2.12.7",
+    "redux-thunk": "3.1.0",
     "sonner": "1.5.0",
     "styled-components": "6.1.13",
     "tailwind-merge": "2.5.2",
