--- a/weather-app-frontend/package.json
+++ b/weather-app-frontend/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-navigation-menu": "1.2.1",
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-switch": "1.1.1",
+    "@radix-ui/react-tooltip": "1.1.3",
     "@types/leaflet": "1.9.12",
     "@types/react-leaflet": "2.8.3",
     "@types/styled-components": "5.1.34",
