--- a/.github/workflows/main_laweatherapp.yml
+++ b/.github/workflows/main_laweatherapp.yml
@@ -1,12 +1,9 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - laweatherapp
+name: Build and deploy Node.js app to Azure Web App - weather-app-backend
 
 on:
   push:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 jobs:
@@ -19,7 +16,7 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: "20.x"
 
       - name: npm install, build, and test
         run: |
@@ -39,11 +36,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write
 
     steps:
       - name: Download artifact from build job
@@ -53,19 +47,18 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_67A37E7F24824D469C6A3D68F41EBC8B }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_9D7C8E5596C4462FB2BB3B45808165F7 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_AE01FF5088F64DF7B8EE5C10CEE8B484 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_906C8F5CAA4B4348A655683172D5F27B }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_2D5F8FCAD95442368C5341C9224D3492 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F24C121346F4459986F3A2B21A644D78 }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: "Deploy to Azure Web App"
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'laweatherapp'
-          slot-name: 'Production'
+          app-name: "weather-app-backend"
+          slot-name: "production"
           package: .
-          
