--- a/weather-app-frontend/.github/workflows/main_laweatherapp.yml
+++ b/weather-app-frontend/.github/workflows/main_laweatherapp.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Node.js app to Azure Web App - weather-app-backend
+name: Build and deploy Node.js app to Azure Web App - weather-app-frontend
 
 on:
   push:
