--- a/weather-app-frontend/.github/workflows/test-workflow.yml
+++ b/weather-app-frontend/.github/workflows/test-workflow.yml
@@ -14,4 +14,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Print hello
-        run: echo "Hello, world!"
+        run: echo "Hello, world there!"
