--- a/weather-app-backend/.github/workflows/master_weather-app-backend.yml
+++ b/weather-app-backend/.github/workflows/master_weather-app-backend.yml
@@ -1,9 +1,12 @@
-name: Build and deploy Node.js app to Azure Web App - frontend
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy Node.js app to Azure Web App - weather-app-backend
 
 on:
   push:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 jobs:
@@ -16,7 +19,7 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: "20.x"
+          node-version: '16.x'
 
       - name: npm install, build, and test
         run: |
@@ -36,9 +39,11 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment: WeatherAppSecrets
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write
+      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
@@ -48,18 +53,19 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-
+      
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_906C8F5CAA4B4348A655683172D5F27B }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_2D5F8FCAD95442368C5341C9224D3492 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F24C121346F4459986F3A2B21A644D78 }}
 
-      - name: "Deploy to Azure Web App"
+      - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: "weather-app-backend"
-          slot-name: "Production"
+          app-name: 'weather-app-backend'
+          slot-name: 'Production'
           package: .
+          
