--- a/weather-app-frontend/package.json
+++ b/weather-app-frontend/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-switch": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.3",
+    "@reduxjs/toolkit": "2.3.0",
     "@types/leaflet": "1.9.12",
     "@types/react-leaflet": "2.8.3",
     "@types/styled-components": "5.1.34",
