--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -9,6 +9,7 @@ jobs:
   deploy-frontend:
     name: Deploy Frontend to Azure
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -42,6 +43,7 @@ jobs:
   deploy-backend:
     name: Deploy Backend to Azure
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
