--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -69,4 +69,4 @@ jobs:
           app-name: laweatherapp-backend
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BACKEND }}
-          package: weather-app-backend # Deploy the entire backend folder
+          package: weather-app-backend
