--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -38,7 +38,7 @@ jobs:
           app-name: laweatherapp
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FRONTEND }}
-          package: weather-app-frontend/.next
+          package: weather-app-frontend
   deploy-backend:
     name: Deploy Backend to Azure
     runs-on: ubuntu-latest
